<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="st_Set_Value" Id="{57831a0c-8031-4a02-af94-f41710a8dd82}">
    <Declaration><![CDATA[{attribute 'hide'}
TYPE st_Set_Value :
STRUCT
	SetPosition		:LREAL;
	SetVelocity		:LREAL;
	SetAcc			:LREAL;
	SetDec			:LREAL;
	SetDirection	:LREAL;
	SetJerk			:LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>